--- a/conda/demuxem_py.yml
+++ b/conda/demuxem_py.yml
@@ -1,4 +1,4 @@
-name: demuxem_py
+name: demuxem_py_test
 channels:
  - bioconda
 dependencies:
@@ -6,6 +6,7 @@ dependencies:
  - pegasuspy
  - pip
  - pip:
+   - pandas<2.0
    - demuxEM
    - argparse
    
