--- a/conda/scsplit.yml
+++ b/conda/scsplit.yml
@@ -4,15 +4,16 @@ channels:
 dependencies:
  - python=3.9
  - setuptools<58
+ - git
  - pip
  - pip:
    - numpy
-   - pandas
+   - pandas<2.0
    - pysam
    - scikit-learn==1.1.3
    - scipy
    - statistics
    - pyVCF
-   - scSplit
+ #  - scSplit
  
    
