1. add method1 and method2 for donor match 2. update documentation 3. add resouce specification in the configuration

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,9 +1,12 @@
 params {
   
   outdir = "result"
-  mode = "parallel"
-  
-  rdsObject = "FALSE"
+  mode = "rescue"
+
+  // hashing-based deconvolution
+
+  // preprocessing
+  rdsObject_preprocess = "False"
   umi_matrix_preprocess = "rna/filtered_feature_bc_matrix"
   hto_matrix_preprocess = "hto/filtered_feature_bc_matrix"
   sel_method = "mean.var.plot"
@@ -14,9 +17,10 @@ params {
   norm_method = "CLR"
   preprocessOut = "preprocessed"
   
-  htodemux = "True"
+  // htodemux
+  htodemux = "False"
   htodemux_preprocess = "True"
-  rdsObj_htodemux = "None"
+  rdsObj_htodemux = "None" // if object is not available, set as "None"
   quantile_htodemux = 0.99
   kfunc = "clara"
   nstarts = 100
@@ -26,6 +30,7 @@ params {
   objectOutHTO = "htodemux"
   assignmentOutHTO = "htodemux"
   
+  // htodemux_visualization
   ridgePlot = "TRUE"
   ridgeNCol = 3
   featureScatter = "False"
@@ -39,14 +44,15 @@ params {
   tsneInvert = "TRUE"
   tsneVerbose = "FALSE"
   tsneApprox = "FALSE"
-  tsneDimMax = 1
+  tsneDimMax = 6
   tsnePerplexity = 100
   heatmap = "TRUE"
-  heatmapNcells= 4000
+  heatmapNcells= 5000
   
-  multiseq = "True"
+  // multiseq
+  multiseq = "False"
   multiseq_preprocess = "True"
-  rdsObj_multi = "None"
+  rdsObj_multiseq = "None" // if object is not available, set as "None"
   quantile_multi = 0.7
   autoThresh = "TRUE"
   maxiter = 5
@@ -57,10 +63,11 @@ params {
   objectOutMulti = "multiseq"
   assignmentOutMulti = "multiseq"
   
-  solo = "False"
+  // solo
+  solo = "True"
   rna_matrix_solo = "rna/filtered_feature_bc_matrix"
   max_epochs = 400
-  lr = "0.001"
+  lr = 0.001
   train_size = 0.9
   validation_size = 0.1
   batch_size = 128
@@ -71,18 +78,20 @@ params {
   include_simulated_doublets = "False"
   assignmentOutSolo = "solo_predict"
   
-  hashsolo = "False"
-  hto_h5_hashsolo = "rna/filtered_feature_bc_matrix.h5"
+  // hashsolo
+  hashsolo = "True"
+  hto_h5_hashsolo = "hto/filtered_feature_bc_matrix.h5"
   priors_negative = 1/3
   priors_singlet = 1/3
   priors_doublet = 1/3
-  pre_existing_clusters = "None"
+  pre_existing_clusters = "None" // if object is not available, set as "None"
   clustering_data = "None"
-  number_of_noise_barcodes = "None"
+  number_of_noise_barcodes = "None" // if object is not available, set as "None"
   assignmentOutHashSolo = "hashsolo"
   plotOutHashSolo = "hashsolo"
   
-  hashedDrops = "False"
+  // hashedDrops
+  hashedDrops = "True"
   hto_matrix_hashedDrops = "hto/raw_feature_bc_matrix"
   lower = 100
   niters = 10000
@@ -107,7 +116,8 @@ params {
   objectOutHashedDrops = "hashedDrops"
   assignmentOutHashedDrops = "hashedDrops"
   
-  demuxem = "True"
+  // demuxem
+  demuxem = "False"
   rna_matrix_demuxem = "rna/raw_feature_bc_matrix"
   hto_matrix_demuxem = "hto/raw_feature_bc_matrix"
   threads_demuxem = 1
@@ -118,25 +128,24 @@ params {
   min_signal = 10.0
   tol = 1e-6
   random_state = 0
-  generate_gender_plot = "None"
+  generate_gender_plot = "None" // if object is not available, set as "None"
   objectOutDemuxem = "demuxem_res"
   
-  
-  select = 1
-  
+  // genetics-based deconvolution
+
   demuxlet = "False"
   demuxlet_preprocess = "False"
   
   freemuxlet = "False"
   freemuxlet_preprocess = "False"
   
-  vireo = "True"
+  vireo = "False"
   vireo_preprocess = "False"
-  vireo_variant = "True"
+  vireo_variant = "False"
   
-  scSplit = "False"
+  scSplit = "True"
   scSplit_preprocess = "False"
-  scSplit_variant = "False"
+  scSplit_variant = "True"
   
   souporcell = "False"
   souporcell_preprocess = "False"
@@ -144,24 +153,26 @@ params {
   cellranger = "False"
   cellranger_dir = "no_cellranger_dir"
   
-  bam = "pooled.sorted.bam"
-  bai = "pooled.sorted.bam.bai"
+  // import parameters for genetics-based deconvolution
+  bam = "outs/pooled.sorted.bam"
+  bai = "outs/pooled.sorted.bam.bai"
   barcodes = "rna/filtered_feature_bc_matrix/barcodes.tsv"
   fasta = "genome.fa"
   fasta_index = "genome.fa.fai"
   nsample = 6
-  common_variants_scSplit = "common_SNP_hg19.vcf"
-  common_variants_souporcell =  "common_variants_hg19.vcf"
-  vcf_mixed = "False"
-  vcf_ref = "/Users/xichenwu/openpipeline/resources_test/demuxafy_test_data/test_dataset.vcf"
-  vcf_donor = "False"
+  common_variants_scSplit = "common_snvs_hg38.tar.gz"
+  common_variants_souporcell =  "common_variants_grch38.vcf"
+  common_variants_freemuxlet = "common_variants.vcf"
+  common_variants_cellsnp  = "common_variants.vcf"
+  vcf_mixed = "None"
+  vcf_donor = "None"
+  celldata = "cellSNP.cells.vcf.gz"
 
-  celldata = "False"
-
+  // demuxlet and freemuxlet
   tag_group = 'CB'
   tag_UMI = 'UB'
-  sm = 'False'
-  sm_list = 'False'
+  sm = 'None'
+  sm_list = 'None'
   sam_verbose = 1000000
   vcf_verbose = 10000
   skip_umi = "False"
@@ -172,78 +183,82 @@ params {
   excl_flag = 3844
   min_total = 0
   min_uniq = 0
-  min_snp = "0"
+  min_snp = 0
   min_umi = 0
   plp = "False"
   field = "GT"
-  geno_error_offset = "0.1"
+  geno_error_offset = 0.1
   geno_error_coeff = 0.0
   r2_info = 'R2'
   min_mac = 1
   min_callrate = 0.50
   alpha = "0.5"
-  doublet_prior = "0.5"
+  doublet_prior = 0.5
   demuxlet_out = "demuxlet_res"
-  
+
+  // freemuxlet
   plp_freemuxlet = "True"
-  init_cluster = "False"
+  init_cluster = "None"
   aux_files = "False"
   verbose = 100
   bf_thres = 5.41
-  frac_init_clust = "0.5"
-  iter_init = "10"
+  frac_init_clust = 0.5
+  iter_init = 10
   keep_init_missing = "False"
   freemuxlet_out = "freemuxlet_out"
 
-  vartrixData = 'False'
+  // vireo
+  vartrixData = 'None'
   genoTag = 'GT'
   noDoublet = 'False'
-  nInit = '50'
+  nInit = 50
   extraDonor = 0
   extraDonorMode = 'distance'
   forceLearnGT = 'False'
   ASEmode = 'False'
   noPlot = 'False'
-  randSeed = 'none'
+  randSeed = 'None'
   cellRange = 'all'
   callAmbientRNAs = 'False'
   nproc = 4
   vireo_out = "vireo_out"
  
+  // souporcell
   threads = 5
   ploidy = 2
   min_alt = 10
   min_ref = 10
   max_loci = 2048
-  restarts = 'False'
-  known_genotypes_sample_names = 'False'
+  restarts = 'None'
+  known_genotypes_sample_names = 'None'
   skip_remap = 'True'
   ignore = 'False'
   souporcell_out = "souporcell_out"
   
+  // scSplit
   refscSplit = 'ref_filtered.csv'
   altscSplit = 'alt_filtered.csv'
-  subscSplit = "10"
-  emsscSplit = "30"
-  dblscSplit = 'False'
-  scSplit_loc = "$projectDir/scSplit"
-  sample_geno = 'False'
+  subscSplit = 10
+  emsscSplit = 30
+  dblscSplit = 'None'
+  sample_geno = 'True'
   scsplit_out = "scsplit_out"
 
-  bam_list = 'no_bam_list'
+  // freebayes
+  bam_list = 'None'
   stdin = 'False'
-  targets = 'no_targets'
-  region = 'False'
-  samples= 'no_samples'
-  populations = 'no_populations'
-  cnv_map = 'no_cnv_map'
+  targets = 'None'
+  region = '1' // None
+  samples= 'None'
+  populations = 'None'
+  cnv_map = 'None'
   vcf_freebayes = "vcf_freebayes_output.vcf"
   gvcf = 'False'
-  gvcf_chunk = 'False'
-  gvcf_dont_use_chunk = 'False'
-  variant_input = 'no_variant_input'
+  gvcf_chunk = 'None'
+  gvcf_dont_use_chunk = 'None'
+  variant_input = 'None'
   only_use_input_alleles = 'False'
-  haplotype_basis_alleles = 'no_haplotype_basis_alleles'
+  haplotype_basis_alleles = 'None'
   report_all_haplotype_alleles = 'False'
   report_monomorphic  = 'False'
   pvar = 0.0
@@ -271,32 +286,32 @@ params {
   min_supporting_allele_qsum = 0
   min_supporting_mapping_qsum = 0
   mismatch_base_quality_threshold = 10
-  read_mismatch_limit = 'False'
+  read_mismatch_limit = 'None'
   read_max_mismatch_fraction = 1.0
-  read_snp_limit = 'False'
-  read_indel_limit = 'False'
+  read_snp_limit = 'None'
+  read_indel_limit = 'None'
   standard_filters = 'False'
   min_alternate_fraction = 0.05
   min_alternate_count = 2
   min_alternate_qsum = 0
   min_alternate_total = 1
   min_coverage = 0
-  max_coverage = 'False'
+  max_coverage = 'None'
   no_population_priors = 'False'
   hwe_priors_off = 'False'
   binomial_obs_priors_off = 'False'
   allele_balance_priors_off = 'False'
-  observation_bias = 'no_observation_bias'
-  base_quality_cap = 'False'
+  observation_bias = 'None'
+  base_quality_cap = 'None'
   prob_contamination = 0.000000001
   legacy_gls= 'False'
-  contamination_estimates = 'no_contamination_estimates'
+  contamination_estimates = 'None'
   report_genotype_likelihood_max = 'False'
   genotyping_max_iterations = 1000
   genotyping_max_banddepth = 6
   posterior_integration_limits = '1,3'
   exclude_unobserved_genotypes = 'False'
-  genotype_variant_threshold = 'False'
+  genotype_variant_threshold = 'None'
   use_mapping_quality = 'False'
   harmonic_indel_quality = 'False'
   read_dependence_factor = 0.9
@@ -304,46 +319,80 @@ params {
   debug = 'False'
   dd = 'False'
  
-  samFileList = 'no_samFileList'
-  regionsVCF  = "test_dataset.vcf"
-  targetsVCF = 'no_targetsVCF'
-  sampleList  = 'no_sampleList'
-  sampleIDs = 'no_sampleIDs'
+  // cellsnp 
+  samFileList = 'None'
+  targetsVCF = 'None'
+  sampleList  = 'None'
+  sampleIDs = 'None'
   genotype_cellSNP = 'True'
   gzip_cellSNP = 'True'
   printSkipSNPs = 'False'
   nproc_cellSNP = 2
-  refseq_cellSNP = 'no_refseq'
-  chrom = 'False'
+  refseq_cellSNP = 'None'
+  chrom = 'None'
   cellTAG = 'CB'
   UMItag = 'Auto'
   minCOUNT = 20
   minMAF = 0.1
   doubletGL = 'False'
-  inclFLAG = 'False'
-  exclFLAG = 'False'
+  inclFLAG = 'None'
+  exclFLAG = 'None'
   minLEN = 30
   minMAPQ = 20
   maxDEPTH = 0
   countORPHAN = 'False'
   cellsnp_out = 'cellSNP_out'
   
-  
+  // donor matching
   match_donor = 'True'
-  demultiplexing_result = "False"
+  demultiplexing_result = "None"
   match_donor_method1 = 'vireo'
   match_donor_method2 = 'multiseq'
-  findVariants = 'True'
+  findVariants = 'False'
   variant_count = 10
   variant_pct = 0.9
-  vireo_parent_dir = 'False'
+  vireo_parent_dir = 'None'
 
 }
 
 conda.enabled = true
 
+profiles{
+    standard {
+        process {
+            executor = 'local'
+            withLabel: big_mem {
+                cpus = 4
+                memory = 15.GB
+            }
+            withLabel: small_mem {
+                cpus = 2
+                memory = 8.GB
+            }
+        }
+        
+    }
+
+    cluster {
+        process {
+            executor = 'local'
+            withLabel: big_mem {
+                cpus = 32
+                memory = 64.GB
+            }
+            withLabel: small_mem {
+                cpus = 16
+                memory = 32.GB
+                // queue = ...
+            }
+        }
+    }
+}
+
+
 process {
     echo = true
+    
     withName:demuxem{
         conda = './conda/demuxem_py.yml'
     }
@@ -401,7 +450,6 @@ process {
     withName:summary_all {
         conda = "./conda/summary.yml"
     }
-
 
 }
 
