--- a/nextflow.config
+++ b/nextflow.config
@@ -1,14 +1,15 @@
 params {
   
-  outdir = "result"
-  mode = "rescue"
+  outdir = "result_test"
+  mode = "hashing"
 
   // hashing-based deconvolution
 
   // preprocessing
-  rdsObject_preprocess = "False"
+  // TRUE or FALSE uppercase
   umi_matrix_preprocess = "rna/filtered_feature_bc_matrix"
   hto_matrix_preprocess = "hto/filtered_feature_bc_matrix"
+  rdsObject_preprocess = "FALSE" 
   sel_method = "mean.var.plot"
   ndelim = "_"
   n_features = 2000
@@ -18,7 +19,7 @@ params {
   preprocessOut = "preprocessed"
   
   // htodemux
-  htodemux = "False"
+  htodemux = "True"
   htodemux_preprocess = "True"
   rdsObj_htodemux = "None" // if object is not available, set as "None"
   quantile_htodemux = 0.99
@@ -31,11 +32,12 @@ params {
   assignmentOutHTO = "htodemux"
   
   // htodemux_visualization
+  // TRUE or  FALSE in uppercase
   ridgePlot = "TRUE"
   ridgeNCol = 3
-  featureScatter = "False"
-  scatterFeat1 = "False"
-  scatterFeat2 = "False"
+  featureScatter = "FALSE"
+  scatterFeat1 = "None" // default set as "None"
+  scatterFeat2 = "None" // default set as "None"
   vlnplot = "TRUE"
   vlnFeatures = "nCount_RNA"
   vlnLog = "TRUE"
@@ -50,21 +52,21 @@ params {
   heatmapNcells= 5000
   
   // multiseq
-  multiseq = "False"
+  multiseq = "True"
   multiseq_preprocess = "True"
   rdsObj_multiseq = "None" // if object is not available, set as "None"
   quantile_multi = 0.7
-  autoThresh = "TRUE"
+  autoThresh = "TRUE" // uppercase
   maxiter = 5
   qrangeFrom = 0.1
   qrangeTo = 0.9
   qrangeBy = 0.05
-  verbose_multiseq = "TRUE"
+  verbose_multiseq = "TRUE" // uppercase
   objectOutMulti = "multiseq"
   assignmentOutMulti = "multiseq"
   
   // solo
-  solo = "True"
+  solo = "False"
   rna_matrix_solo = "rna/filtered_feature_bc_matrix"
   max_epochs = 400
   lr = 0.001
@@ -79,26 +81,26 @@ params {
   assignmentOutSolo = "solo_predict"
   
   // hashsolo
-  hashsolo = "True"
+  hashsolo = "False"
   hto_h5_hashsolo = "hto/filtered_feature_bc_matrix.h5"
   priors_negative = 1/3
   priors_singlet = 1/3
   priors_doublet = 1/3
   pre_existing_clusters = "None" // if object is not available, set as "None"
-  clustering_data = "None"
+  clustering_data = "None" // if object is not available, set as "None"
   number_of_noise_barcodes = "None" // if object is not available, set as "None"
   assignmentOutHashSolo = "hashsolo"
   plotOutHashSolo = "hashsolo"
   
   // hashedDrops
-  hashedDrops = "True"
+  hashedDrops = "False"
   hto_matrix_hashedDrops = "hto/raw_feature_bc_matrix"
   lower = 100
   niters = 10000
-  testAmbient = "TRUE"
+  testAmbient = "TRUE" // uppercase
   ignore_hashedDrops = "NULL"
   alpha_hashedDrops = "NULL"
-  round = "TRUE"
+  round = "TRUE" // uppercase
   byRank = "NULL"
   isCellFDR = 0.01
   objectOutEmptyDrops = "emptyDroplets"
@@ -118,9 +120,9 @@ params {
   
   // demuxem
   demuxem = "False"
-  rna_matrix_demuxem = "rna/raw_feature_bc_matrix"
-  hto_matrix_demuxem = "hto/raw_feature_bc_matrix"
-  threads_demuxem = 1
+  rna_matrix_demuxem = "rna/filtered_feature_bc_matrix"
+  hto_matrix_demuxem = "hto/filtered_feature_bc_matrix"
+  threads_demuxem = 2
   alpha_demuxem = 0.0
   alpha_noise = 1.0
   min_num_genes = 100
@@ -192,7 +194,7 @@ params {
   r2_info = 'R2'
   min_mac = 1
   min_callrate = 0.50
-  alpha = "0.5"
+  alpha = 0.5
   doublet_prior = 0.5
   demuxlet_out = "demuxlet_res"
 
@@ -394,7 +396,7 @@ process {
     echo = true
     
     withName:demuxem{
-        conda = './conda/demuxem_py.yml'
+       conda = './conda/demuxem_py.yml'
     }
     withName:hashedDrops{
         conda = './conda/dropletutils.yml'
@@ -403,15 +405,6 @@ process {
         conda = './conda/hashsolo_py.yml'
     }
     withLabel:seurat{
-        conda = './conda/rseurat.yml'
-    }
-    withName:htodemux {
-        conda = './conda/rseurat.yml'
-    }
-    withName:multi_seq {
-        conda = './conda/rseurat.yml'
-    }
-    withName:preprocess {
         conda = './conda/rseurat.yml'
     }
     withName:solo {
