update readme and singularity config

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,7 +1,7 @@
 params {
   
   outdir = "result_test"
-  mode = "hashing"
+  mode = "rescue"
 
   // hashing-based deconvolution
 
@@ -141,11 +141,11 @@ params {
   freemuxlet = "False"
   freemuxlet_preprocess = "False"
   
-  vireo = "False"
+  vireo = "True"
   vireo_preprocess = "False"
   vireo_variant = "False"
   
-  scSplit = "True"
+  scSplit = "False"
   scSplit_preprocess = "False"
   scSplit_variant = "True"
   
@@ -394,6 +394,12 @@ profiles{
 
 process {
     echo = true
+
+    singularity {
+        enabled = true
+        runOptions = "--bind $PWD"
+        cacheDir = "$PWD"
+    }
     
     withName:demuxem{
        conda = './conda/demuxem_py.yml'
@@ -442,6 +448,9 @@ process {
     }
     withName:summary_all {
         conda = "./conda/summary.yml"
+    }
+    withName:souporcell{
+        container = "shub://wheaton5/souporcell"
     }
 
 }
