add data simulation

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,14 +1,14 @@
 params {
   
   outdir = "result_test"
-  mode = "rescue"
+  mode = "hashing"
 
   // hashing-based deconvolution
 
   // preprocessing
   // TRUE or FALSE uppercase
-  umi_matrix_preprocess = "rna/filtered_feature_bc_matrix"
-  hto_matrix_preprocess = "hto/filtered_feature_bc_matrix"
+  umi_matrix_preprocess = "data/rna"
+  hto_matrix_preprocess = "data/hto"
   rdsObject_preprocess = "FALSE" 
   sel_method = "mean.var.plot"
   ndelim = "_"
@@ -46,10 +46,10 @@ params {
   tsneInvert = "TRUE"
   tsneVerbose = "FALSE"
   tsneApprox = "FALSE"
-  tsneDimMax = 6
+  tsneDimMax = 2
   tsnePerplexity = 100
   heatmap = "TRUE"
-  heatmapNcells= 5000
+  heatmapNcells= 500
   
   // multiseq
   multiseq = "True"
@@ -66,8 +66,8 @@ params {
   assignmentOutMulti = "multiseq"
   
   // solo
-  solo = "False"
-  rna_matrix_solo = "rna/filtered_feature_bc_matrix"
+  solo = "True"
+  rna_matrix_solo = "data/rna"
   max_epochs = 400
   lr = 0.001
   train_size = 0.9
@@ -81,20 +81,20 @@ params {
   assignmentOutSolo = "solo_predict"
   
   // hashsolo
-  hashsolo = "False"
-  hto_h5_hashsolo = "hto/filtered_feature_bc_matrix.h5"
+  hashsolo = "True"
+  hto_matrix_hashsolo = "data/hto"
+  rna_matrix_hashsolo = "None" // if object is not available, set as "None"
   priors_negative = 1/3
   priors_singlet = 1/3
   priors_doublet = 1/3
   pre_existing_clusters = "None" // if object is not available, set as "None"
-  clustering_data = "None" // if object is not available, set as "None"
   number_of_noise_barcodes = "None" // if object is not available, set as "None"
   assignmentOutHashSolo = "hashsolo"
   plotOutHashSolo = "hashsolo"
   
   // hashedDrops
-  hashedDrops = "False"
-  hto_matrix_hashedDrops = "hto/raw_feature_bc_matrix"
+  hashedDrops = "True"
+  hto_matrix_hashedDrops = "data/hto"
   lower = 100
   niters = 10000
   testAmbient = "TRUE" // uppercase
@@ -105,7 +105,7 @@ params {
   isCellFDR = 0.01
   objectOutEmptyDrops = "emptyDroplets"
   assignmentOutEmptyDrops = "emptyDroplets"
-  ambient = "NULL"
+  ambient = "TRUE"
   minProp = 0.05
   pseudoCount = 5
   constantAmbient = "FALSE"
@@ -119,9 +119,9 @@ params {
   assignmentOutHashedDrops = "hashedDrops"
   
   // demuxem
-  demuxem = "False"
-  rna_matrix_demuxem = "rna/filtered_feature_bc_matrix"
-  hto_matrix_demuxem = "hto/filtered_feature_bc_matrix"
+  demuxem = "True"
+  rna_matrix_demuxem = "data/rna"
+  hto_matrix_demuxem = "data/hto"
   threads_demuxem = 2
   alpha_demuxem = 0.0
   alpha_noise = 1.0
@@ -161,14 +161,14 @@ params {
   barcodes = "rna/filtered_feature_bc_matrix/barcodes.tsv"
   fasta = "genome.fa"
   fasta_index = "genome.fa.fai"
-  nsample = 6
+  nsample = 2
   common_variants_scSplit = "common_snvs_hg38.tar.gz"
   common_variants_souporcell =  "common_variants_grch38.vcf"
   common_variants_freemuxlet = "common_variants.vcf"
   common_variants_cellsnp  = "common_variants.vcf"
   vcf_mixed = "None"
   vcf_donor = "None"
-  celldata = "cellSNP.cells.vcf.gz"
+  celldata = "None"
 
   // demuxlet and freemuxlet
   tag_group = 'CB'
@@ -346,7 +346,7 @@ params {
   cellsnp_out = 'cellSNP_out'
   
   // donor matching
-  match_donor = 'True'
+  match_donor = 'False'
   demultiplexing_result = "None"
   match_donor_method1 = 'vireo'
   match_donor_method2 = 'multiseq'
@@ -354,7 +354,6 @@ params {
   variant_count = 10
   variant_pct = 0.9
   vireo_parent_dir = 'None'
-
 }
 
 conda.enabled = true
