change data folder in config

--- a/nextflow.config
+++ b/nextflow.config
@@ -7,8 +7,8 @@ params {
 
   // preprocessing
   // TRUE or FALSE uppercase
-  umi_matrix_preprocess = "data/rna"
-  hto_matrix_preprocess = "data/hto"
+  umi_matrix_preprocess = "test_data/rna"
+  hto_matrix_preprocess = "test_data/hto"
   rdsObject_preprocess = "FALSE" 
   sel_method = "mean.var.plot"
   ndelim = "_"
@@ -67,7 +67,7 @@ params {
   
   // solo
   solo = "True"
-  rna_matrix_solo = "data/rna"
+  rna_matrix_solo = "test_data/rna"
   max_epochs = 400
   lr = 0.001
   train_size = 0.9
@@ -82,7 +82,7 @@ params {
   
   // hashsolo
   hashsolo = "True"
-  hto_matrix_hashsolo = "data/hto"
+  hto_matrix_hashsolo = "test_data/hto"
   rna_matrix_hashsolo = "None" // if object is not available, set as "None"
   priors_negative = 1/3
   priors_singlet = 1/3
@@ -94,7 +94,7 @@ params {
   
   // hashedDrops
   hashedDrops = "True"
-  hto_matrix_hashedDrops = "data/hto"
+  hto_matrix_hashedDrops = "test_data/hto"
   lower = 100
   niters = 10000
   testAmbient = "TRUE" // uppercase
@@ -120,8 +120,8 @@ params {
   
   // demuxem
   demuxem = "True"
-  rna_matrix_demuxem = "data/rna"
-  hto_matrix_demuxem = "data/hto"
+  rna_matrix_demuxem = "test_data/rna"
+  hto_matrix_demuxem = "test_data/hto"
   threads_demuxem = 2
   alpha_demuxem = 0.0
   alpha_noise = 1.0
