1. fix demuxlet plp bug 2. mount bai index for cellsnp 3. make cellsnp argument lowercase

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,7 +1,7 @@
 params {
   
   outdir = "result_test"
-  mode = "hashing"
+  mode = "genetic"
 
   // hashing-based deconvolution
 
@@ -82,7 +82,7 @@ params {
   
   // hashsolo
   hashsolo = "True"
-  hto_matrix_hashsolo = "test_data/hto"
+  hto_matrix_hashsolo = "$projectDir/test_data/hto"
   rna_matrix_hashsolo = "None" // if object is not available, set as "None"
   priors_negative = 1/3
   priors_singlet = 1/3
@@ -119,7 +119,7 @@ params {
   assignmentOutHashedDrops = "hashedDrops"
   
   // demuxem
-  demuxem = "True"
+  demuxem = "False"
   rna_matrix_demuxem = "test_data/rna"
   hto_matrix_demuxem = "test_data/hto"
   threads_demuxem = 2
@@ -133,44 +133,26 @@ params {
   generate_gender_plot = "None" // if object is not available, set as "None"
   objectOutDemuxem = "demuxem_res"
   
-  // genetics-based deconvolution
-
-  demuxlet = "False"
-  demuxlet_preprocess = "False"
-  
-  freemuxlet = "False"
-  freemuxlet_preprocess = "False"
-  
-  vireo = "True"
-  vireo_preprocess = "False"
-  vireo_variant = "False"
-  
-  scSplit = "False"
-  scSplit_preprocess = "False"
-  scSplit_variant = "True"
-  
-  souporcell = "False"
-  souporcell_preprocess = "False"
-  
-  cellranger = "False"
-  cellranger_dir = "no_cellranger_dir"
+  // genetics-based deconvolution 
   
   // import parameters for genetics-based deconvolution
-  bam = "outs/pooled.sorted.bam"
-  bai = "outs/pooled.sorted.bam.bai"
-  barcodes = "rna/filtered_feature_bc_matrix/barcodes.tsv"
+  bam = "$projectDir/test_data/jurkat_293t_downsampled_n500_full_bam.bam"
+  bai = "$projectDir/test_data/jurkat_293t_downsampled_n500_full_bam.bai"
+  barcodes = "$projectDir/test_data/matrices_mex/hg19/barcodes.tsv"
   fasta = "genome.fa"
   fasta_index = "genome.fa.fai"
   nsample = 2
   common_variants_scSplit = "common_snvs_hg38.tar.gz"
   common_variants_souporcell =  "common_variants_grch38.vcf"
-  common_variants_freemuxlet = "common_variants.vcf"
-  common_variants_cellsnp  = "common_variants.vcf"
+  common_variants_freemuxlet = "$projectDir/test_data/jurkat_293t_exons_only.vcf.withAF.vcf.gz"
+  common_variants_cellsnp  = "$projectDir/test_data/jurkat_293t_exons_only.vcf.withAF.vcf.gz"
   vcf_mixed = "None"
-  vcf_donor = "None"
+  vcf_donor = "$projectDir/test_data/jurkat_293t_exons_only.vcf.withAF.vcf.gz"
   celldata = "None"
 
   // demuxlet and freemuxlet
+  demuxlet = "False"
+  demuxlet_preprocess = "False"
   tag_group = 'CB'
   tag_UMI = 'UB'
   sm = 'None'
@@ -194,11 +176,13 @@ params {
   r2_info = 'R2'
   min_mac = 1
   min_callrate = 0.50
-  alpha = 0.5
+  alpha = "0.5" // must be string, multiple values in a single run should be comma separated
   doublet_prior = 0.5
   demuxlet_out = "demuxlet_res"
 
   // freemuxlet
+  freemuxlet = "False"
+  freemuxlet_preprocess = "False"
   plp_freemuxlet = "True"
   init_cluster = "None"
   aux_files = "False"
@@ -210,6 +194,9 @@ params {
   freemuxlet_out = "freemuxlet_out"
 
   // vireo
+  vireo = "True"
+  vireo_preprocess = "False"
+  vireo_variant = "cellSNP"
   vartrixData = 'None'
   genoTag = 'GT'
   noDoublet = 'False'
@@ -222,10 +209,12 @@ params {
   randSeed = 'None'
   cellRange = 'all'
   callAmbientRNAs = 'False'
-  nproc = 4
+  nproc = 2
   vireo_out = "vireo_out"
  
   // souporcell
+  souporcell = "False"
+  souporcell_preprocess = "False"
   threads = 5
   ploidy = 2
   min_alt = 10
@@ -238,6 +227,9 @@ params {
   souporcell_out = "souporcell_out"
   
   // scSplit
+  scSplit = "False"
+  scSplit_preprocess = "True"
+  scSplit_variant = "freebayes"
   refscSplit = 'ref_filtered.csv'
   altscSplit = 'alt_filtered.csv'
   subscSplit = 10
@@ -250,7 +242,7 @@ params {
   bam_list = 'None'
   stdin = 'False'
   targets = 'None'
-  region = '1' // None
+  region = 'None'
   samples= 'None'
   populations = 'None'
   cnv_map = 'None'
@@ -364,7 +356,7 @@ profiles{
             executor = 'local'
             withLabel: big_mem {
                 cpus = 4
-                memory = 15.GB
+                memory = 10.GB
             }
             withLabel: small_mem {
                 cpus = 2
