1. add bcftools version 2. add test data in nextflow config

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,14 +1,14 @@
 params {
   
   outdir = "result_test"
-  mode = "genetic"
+  mode = "rescue"
 
   // hashing-based deconvolution
 
   // preprocessing
   // TRUE or FALSE uppercase
-  umi_matrix_preprocess = "test_data/rna"
-  hto_matrix_preprocess = "test_data/hto"
+  umi_matrix_preprocess = "$projectDir/test_data/rna"
+  hto_matrix_preprocess = "$projectDir/test_data/hto"
   rdsObject_preprocess = "FALSE" 
   sel_method = "mean.var.plot"
   ndelim = "_"
@@ -67,7 +67,7 @@ params {
   
   // solo
   solo = "True"
-  rna_matrix_solo = "test_data/rna"
+  rna_matrix_solo = "$projectDir/test_data/rna"
   max_epochs = 400
   lr = 0.001
   train_size = 0.9
@@ -94,7 +94,7 @@ params {
   
   // hashedDrops
   hashedDrops = "True"
-  hto_matrix_hashedDrops = "test_data/hto"
+  hto_matrix_hashedDrops = "$projectDir/test_data/hto"
   lower = 100
   niters = 10000
   testAmbient = "TRUE" // uppercase
@@ -120,8 +120,8 @@ params {
   
   // demuxem
   demuxem = "False"
-  rna_matrix_demuxem = "test_data/rna"
-  hto_matrix_demuxem = "test_data/hto"
+  rna_matrix_demuxem = "$projectDir/test_data/rna"
+  hto_matrix_demuxem = "$projectDir/test_data/hto"
   threads_demuxem = 2
   alpha_demuxem = 0.0
   alpha_noise = 1.0
@@ -138,12 +138,12 @@ params {
   // import parameters for genetics-based deconvolution
   bam = "$projectDir/test_data/jurkat_293t_downsampled_n500_full_bam.bam"
   bai = "$projectDir/test_data/jurkat_293t_downsampled_n500_full_bam.bai"
-  barcodes = "$projectDir/test_data/matrices_mex/hg19/barcodes.tsv"
-  fasta = "genome.fa"
-  fasta_index = "genome.fa.fai"
+  barcodes = "$projectDir/test_data/barcodes.tsv"
+  fasta = "$projectDir/test_data/refdata-cellranger-hg19-3.0.0/fasta/genome.fa"
+  fasta_index = "$projectDir/test_data/refdata-cellranger-hg19-3.0.0/fasta/genome.fa.fai"
   nsample = 2
-  common_variants_scSplit = "common_snvs_hg38.tar.gz"
-  common_variants_souporcell =  "common_variants_grch38.vcf"
+  common_variants_scSplit = "$projectDir/test_data/common_snvs_hg38.tar.gz"
+  common_variants_souporcell =  "$projectDir/test_data/common_variants_grch38.vcf"
   common_variants_freemuxlet = "$projectDir/test_data/jurkat_293t_exons_only.vcf.withAF.vcf.gz"
   common_variants_cellsnp  = "$projectDir/test_data/jurkat_293t_exons_only.vcf.withAF.vcf.gz"
   vcf_mixed = "None"
@@ -151,7 +151,7 @@ params {
   celldata = "None"
 
   // demuxlet and freemuxlet
-  demuxlet = "False"
+  demuxlet = "True"
   demuxlet_preprocess = "False"
   tag_group = 'CB'
   tag_UMI = 'UB'
@@ -196,7 +196,7 @@ params {
   // vireo
   vireo = "True"
   vireo_preprocess = "False"
-  vireo_variant = "cellSNP"
+  vireo_variant = "cellsnp"
   vartrixData = 'None'
   genoTag = 'GT'
   noDoublet = 'False'
@@ -227,15 +227,15 @@ params {
   souporcell_out = "souporcell_out"
   
   // scSplit
-  scSplit = "False"
-  scSplit_preprocess = "True"
+  scSplit = "True"
+  scSplit_preprocess = "False"
   scSplit_variant = "freebayes"
   refscSplit = 'ref_filtered.csv'
   altscSplit = 'alt_filtered.csv'
   subscSplit = 10
   emsscSplit = 30
   dblscSplit = 'None'
-  sample_geno = 'True'
+  sample_geno = 'False'
   scsplit_out = "scsplit_out"
 
   // freebayes
@@ -435,7 +435,7 @@ process {
         conda = 'bioconda::samtools'
     }
     withName:bcftools {
-        conda = 'bioconda::bcftools'
+        conda = 'bioconda::bcftools=1.9'
     }
     withName:summary_all {
         conda = "./conda/summary.yml"
