--- a/nextflow.config
+++ b/nextflow.config
@@ -2,6 +2,10 @@ params {
   
   outdir = "result_test"
   mode = "rescue"
+  generate_anndata = "True"
+  generate_mudata = "False"
+  rna_matrix = "None"
+  hto_matrix = "None"
 
   // hashing-based deconvolution
 
@@ -119,7 +123,7 @@ params {
   assignmentOutHashedDrops = "hashedDrops"
   
   // demuxem
-  demuxem = "False"
+  demuxem = "True"
   rna_matrix_demuxem = "$projectDir/test_data/rna"
   hto_matrix_demuxem = "$projectDir/test_data/hto"
   threads_demuxem = 2
@@ -338,7 +342,7 @@ params {
   cellsnp_out = 'cellSNP_out'
   
   // donor matching
-  match_donor = 'False'
+  match_donor = 'True'
   demultiplexing_result = "None"
   match_donor_method1 = 'vireo'
   match_donor_method2 = 'multiseq'
@@ -393,7 +397,7 @@ process {
     }
     
     withName:demuxem{
-       conda = './conda/demuxem_py.yml'
+        conda = './conda/demuxem_py.yml'
     }
     withName:hashedDrops{
         conda = './conda/dropletutils.yml'
@@ -408,7 +412,7 @@ process {
         conda = './conda/solo_py.yml'
     }
     withName:summary {
-        conda = './conda/summary.yml'
+        conda = './conda/summary_py.yml'
     }
     withName:matchDonor {
         conda = './conda/donor_match.yml'
@@ -438,7 +442,10 @@ process {
         conda = 'bioconda::bcftools=1.9'
     }
     withName:summary_all {
-        conda = "./conda/summary.yml"
+        conda = "./conda/summary_py.yml"
+    }
+    withName:generate_data {
+        conda = "./conda/summary_py.yml"
     }
     withName:souporcell{
         container = "shub://wheaton5/souporcell"
