--- a/nextflow.config
+++ b/nextflow.config
@@ -137,6 +137,43 @@ params {
   generate_gender_plot = "None" // if object is not available, set as "None"
   objectOutDemuxem = "demuxem_res"
   
+  gmmDemux = 'True'
+  hto_name_gmm = "Hash451_TotalSeqA,Hash452_TotalSeqA,Hash453_TotalSeqA,Hash454_TotalSeqA,Hash455_TotalSeqA,Hash456_TotalSeqA"
+  summary = 2000
+  report = "report_gmm_demux.txt"
+  mode_GMM = "tsv"
+  extract = "None"
+  threshold_gmm = 0.8
+
+  demuxmix_mode = 'True'
+  demuxmix_preprocess = 'True'
+  rdsObj_demuxmix = 'None'
+  rna_available = 'FALSE'
+  model = 'naive'
+  alpha_demuxmix = 0.9
+  beta_demuxmix = 0.9
+  tol_demuxmix = 0.00001
+  maxIter_demuxmix = 100
+  k_hto = 1.5
+  k_rna = 1.5
+
+  bff_mode = 'True'
+  bff_preprocess = 'True'
+  rdsObj_bff = 'None'
+  methods = "bff_raw,bff_cluster"
+  methodsForConsensus = 'NULL'
+  cellbarcodeWhitelist = 'NULL'
+  metricsFile = 'NULL'
+  doTSNE = 'True'
+  doHeatmap = 'True'
+  perCellSaturation = 'NULL'
+  majorityConsensusThreshold = 'NULL'
+  chemistry = "10xV3"
+  callerDisagreementThreshold = 'NULL'
+
+
+
+
   // genetics-based deconvolution 
   
   // import parameters for genetics-based deconvolution
@@ -410,6 +447,15 @@ process {
     }
     withName:solo {
         conda = './conda/solo_py.yml'
+    }
+    withName:gmm_demux {
+        conda = './conda//gmm_demux.yml'
+    }
+    withName:demuxmix {
+        conda = './conda/demuxmix.yml'
+    }
+    withName:bff {
+        conda = './conda/bff.yml'
     }
     withName:summary {
         conda = './conda/summary_py.yml'
