R code for hash_summary,code adapting to hadge structure, migrated R code to bin folder

--- a/nextflow.config
+++ b/nextflow.config
@@ -137,35 +137,38 @@ params {
   generate_gender_plot = "None" // if object is not available, set as "None"
   objectOutDemuxem = "demuxem_res"
   
-  gmmDemux = 'True'
+  gmmDemux = "True"
+  assignmentOutGmmDemux = "gmm_demux"
   hto_name_gmm = "Hash451_TotalSeqA,Hash452_TotalSeqA,Hash453_TotalSeqA,Hash454_TotalSeqA,Hash455_TotalSeqA,Hash456_TotalSeqA"
   summary = 2000
-  report = "report_gmm_demux.txt"
-  mode_GMM = "tsv"
-  extract = "None"
+  report_gmm = "report.txt"
+  mode_GMM = "None"
+  extract = "None" 
   threshold_gmm = 0.8
 
-  demuxmix_mode = 'True'
-  demuxmix_preprocess = 'True'
+  demuxmix_mode = "True"
+  assignmentOutDemuxmix = "demuxmix"
+  demuxmix_preprocess = "True"
   rdsObj_demuxmix = 'None'
   rna_available = 'FALSE'
   model = 'naive'
   alpha_demuxmix = 0.9
   beta_demuxmix = 0.9
   tol_demuxmix = 0.00001
-  maxIter_demuxmix = 100
+  maxIter_demuxmix = 1000
   k_hto = 1.5
   k_rna = 1.5
 
-  bff_mode = 'True'
-  bff_preprocess = 'True'
+  bff_mode = "True"
+  assignmentOutBff = "bff" 
+  bff_preprocess = "True"
   rdsObj_bff = 'None'
   methods = "bff_raw,bff_cluster"
   methodsForConsensus = 'NULL'
   cellbarcodeWhitelist = 'NULL'
   metricsFile = 'NULL'
-  doTSNE = 'True'
-  doHeatmap = 'True'
+  doTSNE = "True"
+  doHeatmap = "True"
   perCellSaturation = 'NULL'
   majorityConsensusThreshold = 'NULL'
   chemistry = "10xV3"
