Docs for Demuxmix, GMM-Demux, extra parameter for GMM-Demux

--- a/nextflow.config
+++ b/nextflow.config
@@ -138,13 +138,15 @@ params {
   objectOutDemuxem = "demuxem_res"
   
   gmmDemux = "True"
+  hto_matrix_gmmDemux = "$projectDir/test_data/hto"
   assignmentOutGmmDemux = "gmm_demux"
-  hto_name_gmm = "Hash451_TotalSeqA,Hash452_TotalSeqA,Hash453_TotalSeqA,Hash454_TotalSeqA,Hash455_TotalSeqA,Hash456_TotalSeqA"
+  hto_name_gmm = "None"
   summary = 2000
   report_gmm = "report.txt"
-  mode_GMM = "None"
+  mode_GMM = "tsv"
   extract = "None" 
   threshold_gmm = 0.8
+  ambiguous = 0.05
 
   demuxmix_mode = "True"
   assignmentOutDemuxmix = "demuxmix"
