--- a/nextflow.config
+++ b/nextflow.config
@@ -1,22 +1,23 @@
 params {
   
   outdir = "result_test"
-  mode = "rescue"
+  mode = "genetic"
   generate_anndata = "True"
   generate_mudata = "False"
-  rna_matrix = "None"
-  hto_matrix = "None"
+  multi_input = "None" // "Users/xichenwu/theislab/hadge/params_input.csv"
 
   // hashing-based deconvolution
+  // key input for hashing-based deconvolution
+  hto_matrix_raw = "/Volumes/wxicu/gx12/hto/raw_feature_bc_matrix"
+  hto_matrix_filtered = "/Volumes/wxicu/gx12/hto/filtered_feature_bc_matrix"
+  rna_matrix_raw = "/Volumes/wxicu/gx12/rna/raw_feature_bc_matrix"
+  rna_matrix_filtered = "/Volumes/wxicu/gx12/rna/filtered_feature_bc_matrix"
 
   // preprocessing
   // TRUE or FALSE uppercase
-  umi_matrix_preprocess = "$projectDir/test_data/rna"
-  hto_matrix_preprocess = "$projectDir/test_data/hto"
-  rdsObject_preprocess = "FALSE" 
   sel_method = "mean.var.plot"
   ndelim = "_"
-  n_features = 2000
+  n_features = "2000"
   assay = "HTO"
   margin = 2
   norm_method = "CLR"
@@ -24,9 +25,9 @@ params {
   
   // htodemux
   htodemux = "True"
-  htodemux_preprocess = "True"
-  rdsObj_htodemux = "None" // if object is not available, set as "None"
-  quantile_htodemux = 0.99
+  rna_matrix_htodemux = "filtered"
+  hto_matrix_htodemux = "filtered"
+  quantile_htodemux = "0.99"
   kfunc = "clara"
   nstarts = 100
   nsamples = 100
@@ -37,29 +38,29 @@ params {
   
   // htodemux_visualization
   // TRUE or  FALSE in uppercase
-  ridgePlot = "TRUE"
+  ridgePlot = "FALSE"
   ridgeNCol = 3
   featureScatter = "FALSE"
   scatterFeat1 = "None" // default set as "None"
   scatterFeat2 = "None" // default set as "None"
-  vlnplot = "TRUE"
+  vlnplot = "FALSE"
   vlnFeatures = "nCount_RNA"
   vlnLog = "TRUE"
-  tsne = "TRUE"
+  tsne = "FALSE"
   tsneIdents = "Negative"
   tsneInvert = "TRUE"
   tsneVerbose = "FALSE"
   tsneApprox = "FALSE"
   tsneDimMax = 2
   tsnePerplexity = 100
-  heatmap = "TRUE"
+  heatmap = "FALSE"
   heatmapNcells= 500
   
   // multiseq
   multiseq = "True"
-  multiseq_preprocess = "True"
-  rdsObj_multiseq = "None" // if object is not available, set as "None"
-  quantile_multi = 0.7
+  rna_matrix_multiseq = "filtered"
+  hto_matrix_multiseq = "filtered"
+  quantile_multi = "0.7"
   autoThresh = "TRUE" // uppercase
   maxiter = 5
   qrangeFrom = 0.1
@@ -70,8 +71,8 @@ params {
   assignmentOutMulti = "multiseq"
   
   // solo
-  solo = "True"
-  rna_matrix_solo = "$projectDir/test_data/rna"
+  solo = "False"
+  rna_matrix_solo = "raw"
   max_epochs = 400
   lr = 0.001
   train_size = 0.9
@@ -85,9 +86,10 @@ params {
   assignmentOutSolo = "solo_predict"
   
   // hashsolo
-  hashsolo = "True"
-  hto_matrix_hashsolo = "$projectDir/test_data/hto"
-  rna_matrix_hashsolo = "None" // if object is not available, set as "None"
+  hashsolo = "False"
+  hto_matrix_hashsolo = "raw"
+  rna_matrix_hashsolo = "raw"
+  use_rna_data = "False"
   priors_negative = 1/3
   priors_singlet = 1/3
   priors_doublet = 1/3
@@ -97,8 +99,8 @@ params {
   plotOutHashSolo = "hashsolo"
   
   // hashedDrops
-  hashedDrops = "True"
-  hto_matrix_hashedDrops = "$projectDir/test_data/hto"
+  hashedDrops = "False"
+  hto_matrix_hashedDrops = "raw"
   lower = 100
   niters = 10000
   testAmbient = "TRUE" // uppercase
@@ -123,9 +125,9 @@ params {
   assignmentOutHashedDrops = "hashedDrops"
   
   // demuxem
-  demuxem = "True"
-  rna_matrix_demuxem = "$projectDir/test_data/rna"
-  hto_matrix_demuxem = "$projectDir/test_data/hto"
+  demuxem = "False"
+  rna_matrix_demuxem = "raw"
+  hto_matrix_demuxem = "raw"
   threads_demuxem = 2
   alpha_demuxem = 0.0
   alpha_noise = 1.0
@@ -149,13 +151,13 @@ params {
   common_variants_scSplit = "$projectDir/test_data/common_snvs_hg38.tar.gz"
   common_variants_souporcell =  "$projectDir/test_data/common_variants_grch38.vcf"
   common_variants_freemuxlet = "$projectDir/test_data/jurkat_293t_exons_only.vcf.withAF.vcf.gz"
-  common_variants_cellsnp  = "$projectDir/test_data/jurkat_293t_exons_only.vcf.withAF.vcf.gz"
+  common_variants_cellsnp  = "$projectDir/test_data/common_variants_grch38.vcf"
   vcf_mixed = "None"
   vcf_donor = "$projectDir/test_data/jurkat_293t_exons_only.vcf.withAF.vcf.gz"
   celldata = "None"
 
   // demuxlet and freemuxlet
-  demuxlet = "True"
+  demuxlet = "False"
   demuxlet_preprocess = "False"
   tag_group = 'CB'
   tag_UMI = 'UB'
@@ -187,7 +189,6 @@ params {
   // freemuxlet
   freemuxlet = "False"
   freemuxlet_preprocess = "False"
-  plp_freemuxlet = "True"
   init_cluster = "None"
   aux_files = "False"
   verbose = 100
@@ -201,7 +202,6 @@ params {
   vireo = "True"
   vireo_preprocess = "False"
   vireo_variant = "cellsnp"
-  vartrixData = 'None'
   genoTag = 'GT'
   noDoublet = 'False'
   nInit = 50
@@ -232,7 +232,7 @@ params {
   
   // scSplit
   scSplit = "True"
-  scSplit_preprocess = "False"
+  scSplit_preprocess = "True"
   scSplit_variant = "freebayes"
   refscSplit = 'ref_filtered.csv'
   altscSplit = 'alt_filtered.csv'
@@ -243,10 +243,9 @@ params {
   scsplit_out = "scsplit_out"
 
   // freebayes
-  bam_list = 'None'
   stdin = 'False'
   targets = 'None'
-  region = 'None'
+  region = '1;2'
   samples= 'None'
   populations = 'None'
   cnv_map = 'None'
@@ -318,7 +317,6 @@ params {
   dd = 'False'
  
   // cellsnp 
-  samFileList = 'None'
   targetsVCF = 'None'
   sampleList  = 'None'
   sampleIDs = 'None'
@@ -344,8 +342,8 @@ params {
   // donor matching
   match_donor = 'True'
   demultiplexing_result = "None"
-  match_donor_method1 = 'vireo'
-  match_donor_method2 = 'multiseq'
+  match_donor_method1 = 'multiseq'
+  match_donor_method2 = 'htodemux'
   findVariants = 'False'
   variant_count = 10
   variant_pct = 0.9
@@ -360,7 +358,7 @@ profiles{
             executor = 'local'
             withLabel: big_mem {
                 cpus = 4
-                memory = 10.GB
+                memory = 8.GB
             }
             withLabel: small_mem {
                 cpus = 2
@@ -397,19 +395,16 @@ process {
     }
     
     withName:demuxem{
-        conda = './conda/demuxem_py.yml'
+        conda = "/opt/homebrew/Caskroom/miniforge/base/envs/demuxem"
     }
     withName:hashedDrops{
-        conda = './conda/dropletutils.yml'
+        conda = '/opt/homebrew/Caskroom/miniforge/base/envs/dropletutils'
     }
     withName:hash_solo {
-        conda = './conda/hashsolo_py.yml'
+        conda = '/opt/homebrew/Caskroom/miniforge/base/envs/hashsolo_py'
     }
     withLabel:seurat{
-        conda = './conda/rseurat.yml'
-    }
-    withName:solo {
-        conda = './conda/solo_py.yml'
+        conda = '/opt/homebrew/Caskroom/miniforge/base/envs/rseurat'
     }
     withName:summary {
         conda = './conda/summary_py.yml'
@@ -424,7 +419,7 @@ process {
         conda = 'bioconda::popscle'
     }
     withName:vireo {
-        conda = "aksarkar::vireosnp"
+        conda = "/opt/homebrew/Caskroom/miniforge/base/envs/vireosnp"
     }
     withName:freebayes {
         conda = 'bioconda::freebayes=1.2'
@@ -436,7 +431,7 @@ process {
         conda = 'bioconda::cellsnp-lite'
     }
     withName:samstool{
-        conda = 'bioconda::samtools'
+        conda = '/opt/homebrew/Caskroom/miniforge/base/envs/samtools'
     }
     withName:bcftools {
         conda = 'bioconda::bcftools=1.9'
